About-page-finished

--- a/Static-website/about.html
+++ b/Static-website/about.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+    <link href="about.css" rel="stylesheet" type="text/css">
+    <title>Aboute me</title>
 </head>
 <body>
-    
+    <div id="menu">
+        <a href="index.html"><button class="head-menu-buttons">Главная</button></a>
+        <a href="about.html"><button class="head-menu-buttons current">Обо мне</button></a>
+        <a href="skills.html"><button class="head-menu-buttons">Навыки</button></a>
+        <a href="hobby.html"><button class="head-menu-buttons">Увлечения</button></a>
+        <a href="contacts.html"><button class="head-menu-buttons">Контакты</button></a>
+    </div>
+    <div id="main-body">
+        <div class="left-text">
+            <h1>I am student</h1>
+            <p>I am lazy</p>
+        </div>
+        <div class="right-img">
+            <video autoplay controls><source src="video/Rick Astley - Never Gonna Give You Up (Official Video) (4K Remaster).mp4"></video>
+        </div>
+    </div>
+    <div id="foot"></div>
 </body>
 </html>
