--- a/Static-website/index.html
+++ b/Static-website/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div id="menu">
-        <a href=""><button class="head-menu-buttons">Главная</button></a>
+        <a href="index.html"><button class="head-menu-buttons current">Главная</button></a>
         <a href="about.html"><button class="head-menu-buttons">Обо мне</button></a>
-        <a href=""><button class="head-menu-buttons">Навыки</button></a>
-        <a href=""><button class="head-menu-buttons">Увлечения</button></a>
-        <a href=""><button class="head-menu-buttons">Контакты</button></a>
+        <a href="skills.html"><button class="head-menu-buttons">Навыки</button></a>
+        <a href="hobby.html"><button class="head-menu-buttons">Увлечения</button></a>
+        <a href="contacts.html"><button class="head-menu-buttons">Контакты</button></a>
     </div>
     <div id="main-body">
         <div class="left-text">
