--- a/Website-Chess/rook.html
+++ b/Website-Chess/rook.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Пешка - Обучение шахматам</title>
+    <title>Ладья - Обучение шахматам</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Пешка</h1>
-        <p>Как ходит пешка в шахматах</p>
+        <h1>Ладья</h1>
+        <p>Как ходит ладья в шахматах</p>
     </header>
     
     <nav>
