--- a/Website-Chess/bishop.html
+++ b/Website-Chess/bishop.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Пешка - Обучение шахматам</title>
+    <title>Слон - Обучение шахматам</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Пешка</h1>
-        <p>Как ходит пешка в шахматах</p>
+        <h1>Слон</h1>
+        <p>Как ходит слон в шахматах</p>
     </header>
     
     <nav>
@@ -26,7 +26,7 @@
     
     <div class="content">
 <h2>Как ходит слон</h2>
-<p>Слон - дальнобойная фигура, работающая по диагоналям.</p>
+<p>Слон - дальнобойная фигура, работающая по диагоналям. Ещё слона могут называть офицером</p>
 <ul>
     <li>Ходит по диагоналям на любое количество клеток</li>
     <li>Не может менять цвет клеток - остаётся на клетках того же цвета, на котором начал игру</li>
