--- a/Website-Chess/queen.html
+++ b/Website-Chess/queen.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Пешка - Обучение шахматам</title>
+    <title>Ферзь - Обучение шахматам</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Пешка</h1>
-        <p>Как ходит пешка в шахматах</p>
+        <h1>Ферзь</h1>
+        <p>Как ходит ферзь в шахматах</p>
     </header>
     
     <nav>
@@ -26,7 +26,7 @@
     
     <div class="content">
 <h2>Как ходит ферзь</h2>
-<p>Ферзь - самая сильная фигура в шахматах.</p>
+<p>Ферзь - самая сильная фигура в шахматах. Ещё ферзя незывают королевой.</p>
 <ul>
     <li>Может ходить как ладья и слон вместе - по горизонталям, вертикалям и диагоналям</li>
     <li>Может перемещаться на любое количество клеток во всех этих направлениях</li>
