Video-added-website-finished

--- a/Website-Chess/pawn.html
+++ b/Website-Chess/pawn.html
@@ -32,10 +32,11 @@
             <li>Из начального положения может пойти на две клетки вперёд</li>
             <li>Бьёт на одну клетку по диагонали вперёд</li>
             <li>Может превратиться в любую фигуру при достижении последней горизонтали</li>
+            <li>Кликни по фигуре, чтобы открыть видео с обучением</li>
         </ul>
         
         <div class="figure-image">
-            [Здесь будет изображение пешки]
+            <a target="_blank" href="pawn-video.html"><img src="images/Pawn.png" alt="Пешка"></a>
         </div>
     </div>
     
