--- a/Website-Chess/rook.html
+++ b/Website-Chess/rook.html
@@ -33,10 +33,11 @@
     <li>Не может перепрыгивать через другие фигуры</li>
     <li>Участвует в рокировке с королём</li>
     <li>Сильнее коня или слона, но слабее ферзя</li>
+    <li>Кликни по фигуре, чтобы открыть видео с обучением</li>
 </ul>
         
         <div class="figure-image">
-            [Здесь будет изображение пешки]
+            <a target="_blank" href="rook-video.html"><img src="images/Rook.png" alt="Ладья"></a>
         </div>
     </div>
     
