--- a/Website-Chess/bishop.html
+++ b/Website-Chess/bishop.html
@@ -33,10 +33,11 @@
     <li>Не может перепрыгивать через другие фигуры</li>
     <li>Два слона вместе часто сильнее, чем два коня или слон и конь</li>
     <li>Особенно эффективен в открытых позициях</li>
+    <li>Кликни по фигуре, чтобы открыть видео с обучением</li>
 </ul>
         
         <div class="figure-image">
-            [Здесь будет изображение пешки]
+            <a target="_blank" href="bishop-video.html"><img src="images/bishop.png" alt="Слон"></a>
         </div>
     </div>
     
