--- a/Website-Chess/index.html
+++ b/Website-Chess/index.html
@@ -6,7 +6,7 @@
     <title>Обучение шахматам</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body>  
     <header>
         <h1>Обучение шахматам</h1>
         <p>Выберите фигуру, чтобы узнать как она ходит</p>
@@ -22,6 +22,8 @@
             <li><a href="king.html">Король</a></li>
         </ul>
     </nav>
+
+    <video class = "main-video" controls src="video/Main.mp4"></video>
     
     <footer>
         <p>© 2025 Обучение шахматам</p>
