--- a/Website-Chess/king.html
+++ b/Website-Chess/king.html
@@ -33,10 +33,11 @@
     <li>Может совершать рокировку с ладьёй (особый ход один раз за партию)</li>
     <li>В конце игры становится активной фигурой</li>
     <li>Если король находится под ударом (шах), игрок обязан защитить его</li>
+    <li>Кликни по фигуре, чтобы открыть видео с обучением</li>
 </ul>
         
         <div class="figure-image">
-            [Здесь будет изображение пешки]
+            <a target="_blank" href="king-video.html"><img src="images/King.png" alt="Король"></a>
         </div>
     </div>
     
