--- a/Website-Chess/knight.html
+++ b/Website-Chess/knight.html
@@ -33,10 +33,11 @@
     <li>Особенно силён в закрытых позициях</li>
     <li>Единственная фигура, которая может атаковать ферзя, не находясь под его ударом</li>
     <li>Меняет цвет клетки при каждом ходе</li>
+    <li>Кликни по фигуре, чтобы открыть видео с обучением</li>
 </ul>
         
         <div class="figure-image">
-            [Здесь будет изображение пешки]
+            <a target="_blank" href="knight-video.html"><img src="images/Knight.png" alt="Конь"></a>
         </div>
     </div>
     
