--- a/Website-Chess/queen.html
+++ b/Website-Chess/queen.html
@@ -33,10 +33,11 @@
     <li>Не может перепрыгивать через другие фигуры</li>
     <li>Ценность ферзя примерно равна двум ладьям</li>
     <li>Королева (ферзь) часто решает исход партии</li>
+    <li>Кликни по фигуре, чтобы открыть видео с обучением</li>
 </ul>
         
         <div class="figure-image">
-            [Здесь будет изображение пешки]
+            <a target="_blank" href="queen-video.html"><img src="images/Queen.png" alt="Ферзь"></a>
         </div>
     </div>
     
